feat: finish volume、next song、previous song

--- a/src/components/BottomBar/BottomBar.scss
+++ b/src/components/BottomBar/BottomBar.scss
@@ -1,5 +1,7 @@
 .barContainer {
-  width: 100vw;
   height: 80px;
-  background-color: cadetblue;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 50px;
 }
