feat:avatar rotate animation

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 .sidebarContainer {
-  width: 150px;
-  height: calc(100vh - 80px);
+  width: 200px;
+  height: 100%;
   background-color: bisque;
 }
