feat: electron-store

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,5 +1,11 @@
 .sidebarContainer {
   width: 200px;
   height: 100%;
-  background-color: bisque;
+  background-color: #eee;
+}
+.btn-add {
+  width: 100%;
+}
+.active {
+  background: rgb(160, 160, 160);
 }
