feat: nowplaying page

--- a/src/components/Cover/Cover.scss
+++ b/src/components/Cover/Cover.scss
@@ -1,3 +1,12 @@
+.container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  // background-color: #333;
+}
 .cover-wrapper {
   display: flex;
   justify-content: center;
@@ -10,4 +19,28 @@
   background-color: yellow;
   border-radius: 50%;
   position: absolute;
+}
+.cover-bg{
+  position: absolute;
+  left:0;
+  top:0;
+  right:0;
+  bottom: 0;
+  width: 100vw;
+  height:100%;
+  filter: blur(6px);
+}
+@keyframes rotateAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.rotate {
+  animation: rotateAnimation 3s infinite linear;
 }
