--- a/src/components/PlayControl/PlayControl.scss
+++ b/src/components/PlayControl/PlayControl.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   height: 100%;
   width: 250px;
-  // padding-left: 50px;
+  margin-left: -100px;
 }
 .icon {
   width: 25px;
